{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 17,
  "lineage": "c9dab8a8-dd99-c957-01e9-609983415096",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_lab_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381249224:internet-gateway/igw-035861b9b0fe5a56b",
            "id": "igw-035861b9b0fe5a56b",
            "owner_id": "879381249224",
            "tags": {
              "Name": "DevOpsLabIGW"
            },
            "tags_all": {
              "Name": "DevOpsLabIGW"
            },
            "vpc_id": "vpc-0c1cce780c1421b11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devops_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_lab_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381249224:route-table/rtb-0fc32de0cdab8652a",
            "id": "rtb-0fc32de0cdab8652a",
            "owner_id": "879381249224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035861b9b0fe5a56b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOpsLabRouteTable"
            },
            "tags_all": {
              "Name": "DevOpsLabRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1cce780c1421b11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devops_lab_igw",
            "aws_vpc.devops_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops_lab_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fa00f740950872b",
            "route_table_id": "rtb-0fc32de0cdab8652a",
            "subnet_id": "subnet-0f02add3a95420d33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devops_lab_igw",
            "aws_route_table.devops_lab_route_table",
            "aws_subnet.devops_lab_subnet",
            "aws_vpc.devops_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381249224:security-group/sg-0ab017a0078cc256e",
            "description": "SG para API DevOps Lab (Portas 22 e 5000)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab017a0078cc256e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso a API HTTP - Porta 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "DevOpsLabSG",
            "name_prefix": "",
            "owner_id": "879381249224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOpsLabSG"
            },
            "tags_all": {
              "Name": "DevOpsLabSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1cce780c1421b11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devops_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_lab_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381249224:subnet/subnet-0f02add3a95420d33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f02add3a95420d33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "879381249224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevOpsLabSubnet"
            },
            "tags_all": {
              "Name": "DevOpsLabSubnet"
            },
            "vpc_id": "vpc-0c1cce780c1421b11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devops_lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879381249224:vpc/vpc-0c1cce780c1421b11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f5b8053724c3ba8",
            "default_route_table_id": "rtb-01e53d4f2197158d2",
            "default_security_group_id": "sg-0d04d7065d4994257",
            "dhcp_options_id": "dopt-0bd05abfcdf584e94",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1cce780c1421b11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e53d4f2197158d2",
            "owner_id": "879381249224",
            "tags": {
              "Name": "DevOpsLabVPC"
            },
            "tags_all": {
              "Name": "DevOpsLabVPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}